# Autogarden

./: .gitignore  Makefile  Procfile  README.md  manage.py  package-lock.json  package.json  pytest.ini  requirements.txt  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
assets/: ajaxFormHandler.js  gardenDetail.js  utils.js  (+6 more)
cpp/Autogarden/: CMakeLists.txt  README.md  autogarden.ino  simple_autogarden.ino  vcpkg.json
cpp/Autogarden/include/: Arduino.h  autogarden.h  utils.hpp
cpp/Autogarden/include/autogarden/: autogarden.hpp  config_parser.hpp  duration_parser.hpp  factory.hpp  watering_station.hpp
cpp/Autogarden/include/autogarden/interfaces/: autogarden.hpp  config_parser.hpp  duration_parser.hpp  factory.hpp  watering_station.hpp
cpp/Autogarden/include/client/: api_client.hpp
cpp/Autogarden/include/client/esp8266/: http_client.hpp  https_client.hpp  wifi_connection.hpp
cpp/Autogarden/include/client/esp8266/interfaces/: wifi_connection.hpp
cpp/Autogarden/include/client/interfaces/: api_client.hpp  http_client.hpp
cpp/Autogarden/include/components/: component.hpp  components.hpp  connector.hpp  di_state_actuator.hpp  factory.hpp  microcontroller.hpp  terminal.hpp
cpp/Autogarden/include/components/liquid_level_sensor/: liquid_level_sensor.hpp
cpp/Autogarden/include/components/microcontroller/: factory.hpp  microcontroller.hpp
cpp/Autogarden/include/components/moisture_sensor/: factory.hpp  moisture_sensor.hpp
cpp/Autogarden/include/components/multiplexer/: factory.hpp  multiplexer.hpp  oi_policy.hpp  output_pin_set.hpp  translation_policy.hpp
cpp/Autogarden/include/components/pump/: factory.hpp  pump.hpp
cpp/Autogarden/include/components/shift_register/: factory.hpp  input_pinset.hpp  shift_register.hpp
cpp/Autogarden/include/components/valve/: factory.hpp  valve.hpp
cpp/Autogarden/include/pins/: analog_input_pin.hpp  analog_output_pin.hpp  digital_pin.hpp  factory.hpp  input_pin_set.hpp  logic_input.hpp  logic_input_pinset.hpp  logic_output.hpp  logic_output_pinset.hpp  logic_pin.hpp  output.hpp  output_pin_set.hpp  output_pinset.hpp  pin.hpp  pin_factory.hpp  pin_set.hpp  pin_view.hpp  pins.hpp  terminal.hpp  terminal_pin.hpp  terminal_pin_set.hpp  terminal_pinset.hpp
cpp/Autogarden/include/pins/interfaces/: logic_input.hpp  logic_input_pinset.hpp  logic_output.hpp  logic_output_pinset.hpp  output.hpp  output_pinset.hpp  pin.hpp  pin_factory.hpp  terminal.hpp  terminal_pinset.hpp
cpp/Autogarden/include/signals/: analog_read.hpp  analog_write.hpp  digital_read.hpp  digital_write.hpp  factory.hpp  signals.hpp
cpp/Autogarden/include/signals/interfaces/: signal.hpp
cpp/Autogarden/src/: Arduino.cpp
cpp/Autogarden/tests/: mock_arduino.hpp  mock_input_pin_set.hpp  mock_oi_policy.hpp  mock_output_pin_set.hpp  mock_pin.hpp  mock_terminal_pin.hpp  mock_terminal_pin_set.hpp  test_analog_input_pin.cpp  test_analog_output_pin.cpp  test_digital_pin.cpp  test_input_pin_set.cpp  test_logic_pin.cpp  test_microcontroller.cpp  test_multiplexer.cpp  test_multiplexer_oi_policy.cpp  test_multiplexer_output_pin_set.cpp  test_output_pin_set.cpp  test_terminal_pin_set.cpp  test_usage.cpp
cpp/Autogarden/tests/autogarden/: test_autogarden.cpp  test_config_parser.cpp  test_duration_parser.cpp  test_watering_station.cpp
cpp/Autogarden/tests/components/: test_liquid_level_sensor.cpp  test_microcontroller.cpp  test_moisture_sensor.cpp  test_multiplexer.cpp  test_pump.cpp  test_shift_register.cpp  test_shift_register_input_pinset.cpp  test_translation_policy.cpp  test_valve.cpp
cpp/Autogarden/tests/mocks/: mock_logic_input.hpp  mock_logic_input_pinset.hpp  mock_logic_output.hpp  mock_logic_output_pinset.hpp  mock_output.hpp  mock_shift_register_input_pinset.hpp  mock_signal.hpp  mock_terminal.hpp  mock_terminal_pinset.hpp  mock_translation_policy.hpp
cpp/Autogarden/tests/pins/: test_logic_input.cpp  test_logic_input_pinset.cpp  test_logic_output.cpp  test_logic_output_pinset.cpp  test_output_pinset.cpp  test_terminal.cpp  test_terminal_pinset.cpp
cpp/Autogarden/tests/signals/: test_analog_read.cpp  test_analog_write.cpp  test_digital_read.cpp  test_digital_write.cpp
cpp/Autogarden/tests/suites/: iterable_test_suite.hpp
cpp/Autogarden/tests/utils/factories/: pin_factory.hpp  signal_factory.hpp
cpp/Autogarden/tests/utils/mocks/: mock_api_client.hpp  mock_arduino.hpp  mock_duration_parser.hpp  mock_liquid_level_sensor.hpp  mock_logic_input.hpp  mock_logic_input_pinset.hpp  mock_logic_output_pinset.hpp  mock_microcontroller.hpp  mock_moisture_sensor.hpp  mock_output.hpp  mock_pump.hpp  mock_terminal.hpp  mock_terminal_pinset.hpp  mock_translation_policy.hpp  mock_valve.hpp  mock_watering_station.hpp  mock_watering_station_config_parser.hpp
cpp/Autogarden/tests/utils/suites/: component_test_suite.hpp  iterable_test_suite.hpp  pin_test_suite.hpp
(+166 files in other folders)
